--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -1000,94 +1000,94 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <property name="visible">True</property>
     <property name="stock">gtk-save-as</property>
   </object>
-  <object class="GtkWindow" id="exportDialog">
+  <object class="GtkWindow" id="export_dialog">
     <property name="title" translatable="yes">Export tasks</property>
     <property name="window_position">mouse</property>
+    <signal name="delete_event" handler="on_export_dialog_delete_event"/>
     <child>
       <object class="GtkVBox" id="vbox3">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkLabel" id="label6">
+          <object class="GtkTable" id="table1">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">label</property>
+            <property name="border_width">15</property>
+            <property name="n_rows">2</property>
+            <property name="n_columns">2</property>
+            <property name="column_spacing">10</property>
+            <property name="row_spacing">10</property>
+            <child>
+              <object class="GtkLabel" id="export_label1">
+                <property name="visible">True</property>
+                <property name="xalign">1</property>
+                <property name="ypad">7</property>
+                <property name="label" translatable="yes">Select a tag</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel" id="export_label2">
+                <property name="visible">True</property>
+                <property name="xalign">1</property>
+                <property name="label" translatable="yes">Select an export template</property>
+                <property name="justify">right</property>
+              </object>
+              <packing>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="export_combo_tags">
+                <property name="visible">True</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="export_combo_templ">
+                <property name="visible">True</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkComboBox" id="combobox1">
-            <property name="visible">True</property>
-          </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkHSeparator" id="hseparator1">
-            <property name="visible">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="position">2</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label44">
-            <property name="visible">True</property>
-            <property name="label" translatable="yes">label</property>
-          </object>
-          <packing>
-            <property name="position">3</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkRadioButton" id="radiobutton7">
-            <property name="label" translatable="yes">radiobutton</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="active">True</property>
-            <property name="draw_indicator">True</property>
-          </object>
-          <packing>
-            <property name="position">4</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkRadioButton" id="radiobutton8">
-            <property name="label" translatable="yes">radiobutton</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="active">True</property>
-            <property name="draw_indicator">True</property>
-          </object>
-          <packing>
-            <property name="position">5</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkHBox" id="hbox30">
+            <property name="height_request">50</property>
             <property name="visible">True</property>
+            <property name="border_width">12</property>
+            <property name="spacing">23</property>
             <child>
-              <object class="GtkButton" id="button10">
-                <property name="label" translatable="yes">button</property>
+              <object class="GtkButton" id="export_btn_cancel">
+                <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_export_btn_cancel_clicked"/>
               </object>
               <packing>
                 <property name="position">0</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button2">
-                <property name="label" translatable="yes">button</property>
+              <object class="GtkButton" id="export_btn_ok">
+                <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_export_btn_ok_clicked"/>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -1095,7 +1095,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
             </child>
           </object>
           <packing>
-            <property name="position">6</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </object>
