--- a/GTG/taskeditor/taskeditor.glade
+++ b/GTG/taskeditor/taskeditor.glade
@@ -6,6 +6,7 @@
     <property name="title" translatable="yes">Task</property>
     <property name="default_width">450</property>
     <property name="default_height">400</property>
+    <signal name="configure_event" handler="on_move"/>
     <child>
       <object class="GtkVBox" id="vbox4">
         <property name="visible">True</property>
