--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -1038,11 +1038,12 @@ view will be exported.</property>
                 <child>
                   <object class="GtkComboBox" id="export_combo_templ">
                     <property name="width_request">150</property>
-                    <property name="height_request">30</property>
                     <property name="visible">True</property>
                     <signal name="changed" handler="on_export_combo_templ_changed"/>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="padding">30</property>
                     <property name="position">1</property>
                   </packing>
@@ -1062,8 +1063,8 @@ view will be exported.</property>
             </child>
             <child>
               <object class="GtkImage" id="export_image">
-                <property name="width_request">150</property>
-                <property name="height_request">150</property>
+                <property name="width_request">300</property>
+                <property name="height_request">350</property>
                 <property name="visible">True</property>
               </object>
               <packing>
