- NotificationArea Icon now shortens long tasks - bug fixing in NotificationArea - fixed disaligments in pluginmanager

--- a/GTG/core/plugins/pluginmanager.glade
+++ b/GTG/core/plugins/pluginmanager.glade
@@ -56,6 +56,7 @@
                               <object class="GtkLabel" id="label10">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
+                                <property name="yalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="label" translatable="yes">Version: </property>
@@ -70,6 +71,7 @@
                               <object class="GtkLabel" id="lblPluginVersion">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
+                                <property name="yalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                               </object>
@@ -93,6 +95,7 @@
                               <object class="GtkLabel" id="label11">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
+                                <property name="yalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="label" translatable="yes">Authors:  </property>
@@ -106,6 +109,10 @@
                             <child>
                               <object class="GtkLabel" id="lblPluginAuthors">
                                 <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="yalign">0</property>
+                                <property name="xpad">1</property>
+                                <property name="ypad">4</property>
                                 <property name="wrap">True</property>
                               </object>
                               <packing>
@@ -125,6 +132,8 @@
                           <object class="GtkLabel" id="label14">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="xpad">1</property>
                             <property name="ypad">4</property>
                             <property name="label" translatable="yes">Description:</property>
                           </object>
